--- a/templates/base.html
+++ b/templates/base.html
@@ -74,8 +74,9 @@
                         <ul class="dropdown-menu">
                             <li><a href="{% url 'realApp:registrer' %}">人员注册</a></li>
                             <li><a href="{% url 'realApp:visualization' %}">可视化分析</a></li>
-                            <li><a href="">整体视角</a></li>
-                            <li><a href="">机器人视角</a></li>
+                            <li><a href="{% url 'realApp:agent_control' %}">智能体控制系统</a></li>
+<!--                            <li><a href="">整体视角</a></li>-->
+<!--                            <li><a href="">机器人视角</a></li>-->
                         </ul>
                     </li>
                     <li class="dropdown nav-top" id='about'>
