--- a/realApp/templates/registrer.html
+++ b/realApp/templates/registrer.html
@@ -7,90 +7,124 @@
 {% endblock %}
 
 {% block content %}
-<link href="{% static 'css/contact.css' %}" rel="stylesheet">
-<script src="{% static 'js/layDate-v5.0.9/laydate.js' %}"></script>
-</script>
-<!-- 主体内容 -->
-<div class="container">
-    <div class="row row-3">
-        <!-- 说明文字和图片 -->
-        <div class="col-md-12">
-            <div class="model-details">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        请填写个人信息
-                    </div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <form action="." name="resumeForm" method="post" class="form-horizontal" role="form"
-                                enctype="multipart/form-data">
-                                {% csrf_token %}
-                                <!-- 左侧 -->
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label class="col-sm-3 control-label">姓名：</label>
-                                        <div class="col-sm-9">
-                                            {{resumeForm.name|add_class:"form-control"|attr:"placeholder=请填写姓名"}}
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="col-sm-3 control-label">电话证号：</label>
-                                        <div class="col-sm-9">
-                                            {{resumeForm.phoneID|add_class:"form-control"}}
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="col-sm-3 control-label">性别：</label>
-                                        <div class="col-sm-9">
-                                            {{resumeForm.sex|add_class:"form-control"}}
-                                        </div>
-                                    </div>
-<!--                                </div>-->
-                                <!-- 右侧 -->
-<!--                                <div class="col-md-6">-->
-                                    <div class="form-group">
-                                         <label class="col-sm-3 control-label">上传照片：</label>
-                                        <div class="col-sm-9" style="text-align:center">
-                                            <img id="profileshow" src="{% static 'img/sample.png' %}"
-                                                style="width:120px">
-                                        </div>
 
-                                        {{resumeForm.photo}}
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="col-sm-3 control-label">描述：</label>
-                                        <div class="col-sm-9">
-                                            {{resumeForm.experience|add_class:"form-control"}}
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <center><input type="submit" class="btn btn-primary" value="提交" /></center>
-                                </div>
-                            </form>
+
+<style>
+    .img-preview {
+        width: 120px;
+        height: auto;
+        border: 1px solid #ccc;
+        margin-top: 10px;
+    }
+</style>
+
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card shadow-sm">
+                <div class="card-header bg-primary text-white text-center">
+                    <h4>请填写个人信息</h4>
+                </div>
+                <div class="card-body">
+                    <form action="." name="resumeForm" method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+
+                        <!-- 姓名 -->
+                        <div class="mb-3 row">
+                            <label class="col-sm-3 col-form-label">姓名：</label>
+                            <div class="col-sm-9">
+                                {{ resumeForm.name|add_class:"form-control"|attr:"placeholder=请填写姓名" }}
+                            </div>
                         </div>
-                    </div>
+
+                        <!-- 联系方式 -->
+                        <div class="mb-3 row">
+                            <label class="col-sm-3 col-form-label">电话号码：</label>
+                            <div class="col-sm-9">
+                                {{ resumeForm.phoneID|add_class:"form-control" }}
+                            </div>
+                        </div>
+
+                        <!-- 性别 -->
+                        <div class="mb-3 row">
+                            <label class="col-sm-3 col-form-label">性别：</label>
+                            <div class="col-sm-9">
+                                {{ resumeForm.sex|add_class:"form-select" }}
+                            </div>
+                        </div>
+
+                        <!-- 照片上传 -->
+                        <div class="mb-3 row">
+                            <label class="col-sm-3 col-form-label">上传照片：</label>
+                            <div class="col-sm-9 text-center">
+                                <video id="video" autoplay style="width: 100%; max-width: 240px; display: none;"></video>
+                                <canvas id="canvas" style="display:none;"></canvas>
+                                <img id="profileshow" src="{% static 'img/sample.png' %}" class="img-thumbnail img-preview" alt="预览图">
+
+                                <!-- Base64 图像数据隐藏字段 -->
+                                <input type="hidden" id="photo_data" name="photo_data">
+
+                                <!-- 操作按钮 -->
+                                <div class="mt-2">
+                                    <button type="button" class="btn btn-success btn-sm" onclick="startCamera()">打开摄像头</button>
+                                    <button type="button" class="btn btn-info btn-sm" onclick="capturePhoto()">拍照</button>
+                                </div>
+
+                                <!-- 继续支持传统文件上传 -->
+<!--                                <div class="mt-2">-->
+<!--                                    <label for="{{ resumeForm.photo.id_for_label }}" class="form-label">或上传图片：</label>-->
+<!--                                    {{ resumeForm.photo|add_class:"form-control" }}-->
+<!--                                </div>-->
+                            </div>
+                        </div>
+
+                        <!-- 描述 -->
+                        <div class="mb-3 row">
+                            <label class="col-sm-3 col-form-label">描述：</label>
+                            <div class="col-sm-9">
+                                {{ resumeForm.experience|add_class:"form-control" }}
+                            </div>
+                        </div>
+
+                        <!-- 提交按钮 -->
+                        <div class="text-center mt-4">
+                            <button type="submit" class="btn btn-primary">提交</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-
-    <script>
-        laydate.render({
-            elem: '#id_birth'
-        });
-    </script>
-    <script>
-    $(function () {
-        $('#id_photo').on('change', function () {
-            var r = new FileReader();
-            f = document.getElementById('id_photo').files[0];
-            r.readAsDataURL(f);
-            r.onload = function (e) {
-                document.getElementById('profileshow').src = this.result;
-            };
-        });
-    });
-</script>
 </div>
+
+<!-- JavaScript 控制摄像头功能 -->
+<script>
+function startCamera() {
+    const video = document.getElementById('video');
+    navigator.mediaDevices.getUserMedia({ video: true })
+        .then(stream => {
+            video.srcObject = stream;
+            video.style.display = 'block';
+        })
+        .catch(err => {
+            alert("无法访问摄像头，请检查权限设置。");
+            console.error(err);
+        });
+}
+
+function capturePhoto() {
+    const video = document.getElementById('video');
+    const canvas = document.getElementById('canvas');
+    const ctx = canvas.getContext('2d');
+    canvas.width = video.videoWidth;
+    canvas.height = video.videoHeight;
+    ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+    // 显示预览并保存 base64 数据
+    const dataURL = canvas.toDataURL('image/png');
+    document.getElementById('profileshow').src = dataURL;
+    document.getElementById('photo_data').value = dataURL;
+}
+</script>
+
 {% endblock %}
