--- a/templates/report.html
+++ b/templates/report.html
@@ -12,10 +12,10 @@
 <div class="bnt">
   <div class="topbnt_left fl">
       <ul>
-       <li ><a href={% url 'realApp:visualization'%}>>实时监控</a></li>
-      <li><a href=<a href="#" onclick="window.location.href='/admin/'">>后台管理</a></li>
+       <li><a href={% url 'realApp:visualization'%}>实时监控</a></li>
+      <li><a href="#" onclick="window.location.href='/admin/'">>后台管理</a></li>
       <li><a href={% url 'realApp:agentV'%}>智能体</a></li>
-        </ul>
+      </ul>
   </div>
   <h1 class="tith1 fl">监测报告</h1>
   <div class=" fr topbnt_right">
